tests/negative/b5_wrong_next.lator
s is nums where every element <= y
